--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <li class="letra" id="Z">Z</li>
                 </ul>
             </div>
-            <span class="intentos-restantes">Palito está a punto de ser ahorcado. Por favor, sálvalo!</span>
+            <span class="intentos-restantes">Palito está a punto de ser ahorcado. Por favor, sálvalo! 🙏🙏</span>
             <span class="palabra"></span>
         </div>
     </div>
