--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="acciones">
             <div class="botones">
                 <button class="nueva-palabra">Nueva Palabra</button>
-                <button class="rendirse">Rendirse</button>
+                <button class="rendirse botonOff">Rendirse</button>
             </div>
             <div class="keywords">
                 <ul class="lista-letras">
