--- a/index.html
+++ b/index.html
@@ -55,10 +55,8 @@
     </div>
 
     <footer>
-        <div class="copyright">
-            <p>&#169; Valentin Di Geronimo - 2022</p>
-        </div>
         <div class="redes">
+            <span class="copyrigth">&#169; Valentin Di Geronimo - 2022</span>
             <a href="https://github.com/Zippomiga" target="_blank"><img class="imgRedes" src="Imagenes/IconoGithub.png" alt="Github"></a>
             <a href="https://www.linkedin.com/in/digeronimovalentin/" target="_blank"><img class="imgRedes" src="Imagenes/IconoLinkedin.png" alt="Linkedin"></a>
             <a href="https://api.whatsapp.com/send?phone=541168904100&text=%20" target="_blank"><img class="imgRedes" src="Imagenes/IconoWhatsApp.png" alt="WhatsApp"></a>
